* Button class ready for the actions
* Cleaned the entiere code
* Commented the entiere code
* Fixed warnings

## Version 8: 25/04/17 ##
* Label added in the Theme
+ Background methods added
* Theme improved (label placement & appareance)

## Version 9 : 05/05/17 ##
* Button's constructor now takes its label
* New font fix (it was a pointer / reference problem)
* Changed ressources to resources

## Version 10 : 05/05/17 ##
+ loadLevel : it loads a level from a file 
	- it doesn't cause a crash if the level does not exist)
	- it overrides the precedent level if there was one
	- levels ready for next updates
* Fixed grid conception problems (some crashes)

## Version 11 : 09/05/17 ##
+ saveLevel()  
+ level selection working

## Version 12 : 10/05/17 ##
* Changed level id from int to string (problem 00 != 0)
* Fixed showGrid algorithm
* Fixed memory loose

## Version 13 : 15/05/17 ##
* Fixed labels (bob fix)
+ Added an attribute for the mouse status : m_pressing_mouse (application.h)
+ Constructor by copy for button to move it: draw_button_at(..)
+ Rectangle moving
+ Added programbox

# Version 14 : 16/05/17 ##
+ Implementation des programboxes (non fini)

## Version 15: 19/15/17 ##
+ Ajout des textures des boutons
+ Ajout du robot
+ Ajout de program handler
* Fix textures
+ et plein d'autres choses..........


#TODO:
(code ready in grid.cpp)
* If the file loads properly, check if the values are okay:
- correct fields (4 fields with 1 in the header..)
- pos x & y not too big
- light >1 show warning in console
- height >=0
* Method in interface that is called only on changing game state ( inits things -> remove m_frist_loop)
* Catch / exceptions handler when a line of a level is fuckedup
* GAP of the grid: drawGrid() should be customizable -> drawGrid(gap)
* FR TO ENGLISH IN APPLICATION;H
* Changer l'algo oNCell()

* Finir runProgram();
* Fix save level (ajout du robot)
+ interaction avec les boutons des progam box
+ ajout program box rang donné